fix issues with caching, make sure to disable if data set is different